--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 						La note enchantée
 					</h3>	
 					<p>
-						<a href="la-note-enchantee.html">MENU</a>
+						<a href="contenu/enchantee/la-note-enchantee.html">MENU</a>
 					</p>	
 				</article>
 				<article class="chic">
@@ -25,7 +25,7 @@
 						Le chic à la française
 					</h3>
 					<p>
-						<a href="le-chic-a-la-francaise.html">MENU</a>
+						<a href="contenu/francaise/le-chic-a-la-francaise.html">MENU</a>
 					</p>		
 				</article>
 				<article class="delice">
@@ -33,7 +33,7 @@
 						Le délice des papilles
 					</h3>
 					<p>
-						<a href="le-delice-des-papilles.html">MENU</a>
+						<a href="contenu/papilles/le-delice-des-papilles.html">MENU</a>
 					</p>	
 				</article>	
 				<article class="palette">
@@ -41,7 +41,7 @@
 						La palette du goût
 					</h3>
 					<p>
-						<a href="la-palette-du-gout.html">MENU</a>
+						<a href="contenu/gout/la-palette-du-gout.html">MENU</a>
 					</p>		
 				</article>	
 			</section>
