--- a/index.html
+++ b/index.html
@@ -3,47 +3,49 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<title>ohmyfood</title>
 	</head>
 	<body>
 		<main>
 			<header class="header">
-				<h1>ohmyfood</h1>
+				<h1>
+					ohmyfood
+				</h1>
 			</header>
-			<section id="conteneur">			
+			<section>			
 				<article class="note"> 
-					<h3> 
+					<h2> 
 						La note enchantée
-					</h3>	
+					</h2>	
 					<p>
-						<a href="contenu/enchantee/la-note-enchantee.html">MENU</a>
+						<a href="La-note-enchantee.html">MENU</a>
 					</p>	
 				</article>
 				<article class="chic">
-					<h3>
+					<h2>
 						Le chic à la française
-					</h3>
+					</h2>
 					<p>
-						<a href="contenu/francaise/le-chic-a-la-francaise.html">MENU</a>
+						<a href="Le-chic-a-la-francaise.html">MENU</a>
 					</p>		
 				</article>
 				<article class="delice">
-					<h3>
+					<h2>
 						Le délice des papilles
-					</h3>
+					</h2>
 					<p>
-						<a href="contenu/papilles/le-delice-des-papilles.html">MENU</a>
+						<a href="Le-delice-des-papilles.html">MENU</a>
 					</p>	
-				</article>	
+				</article>
 				<article class="palette">
-					<h3>
+					<h2>
 						La palette du goût
-					</h3>
+					</h2>
 					<p>
-						<a href="contenu/gout/la-palette-du-gout.html">MENU</a>
+						<a href="La-palette-du-gout.html">MENU</a>
 					</p>		
-				</article>	
+				</article>
 			</section>
 			<aside class="bientot">
 				Prochainement
