--- a/index.html
+++ b/index.html
@@ -4,47 +4,53 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="https://kit.fontawesome.com/c14a206430.js" crossorigin="anonymous"></script>
 		<title>ohmyfood</title>
 	</head>
 	<body>
 		<main>
 			<header class="header">
 				<h1>
-					ohmyfood
+					<a href="index.html">ohmyfood</a>
 				</h1>
 			</header>
-			<section>			
-				<article class="note"> 
-					<h2> 
-						La note enchantée
-					</h2>	
-					<p>
-						<a href="La-note-enchantee.html">MENU</a>
-					</p>	
+			<section class="menu">
+				<article class="row">		
+					<div class="note"> 
+						<i class="fab fa-itunes-note fa-2x"></i>
+						<h2> 
+							La note enchantée
+						</h2>	
+						<p>
+							<a href="La-note-enchantee.html">MENU</a>
+						</p>	
+					</div>
+					<div class="chic">
+						<h2>
+							Le chic à la française
+						</h2>
+						<p>
+							<a href="Le-chic-a-la-francaise.html">MENU</a>
+						</p>		
+					</div>
 				</article>
-				<article class="chic">
-					<h2>
-						Le chic à la française
-					</h2>
-					<p>
-						<a href="Le-chic-a-la-francaise.html">MENU</a>
-					</p>		
-				</article>
-				<article class="delice">
-					<h2>
-						Le délice des papilles
-					</h2>
-					<p>
-						<a href="Le-delice-des-papilles.html">MENU</a>
-					</p>	
-				</article>
-				<article class="palette">
-					<h2>
-						La palette du goût
-					</h2>
-					<p>
-						<a href="La-palette-du-gout.html">MENU</a>
-					</p>		
+				<article class="row">	
+					<div class="delice">
+						<h2>
+							Le délice des papilles
+						</h2>
+						<p>
+							<a href="Le-delice-des-papilles.html">MENU</a>
+						</p>	
+					</div>
+					<div class="palette">
+						<h2>
+							La palette du goût
+						</h2>
+						<p>
+							<a href="La-palette-du-gout.html">MENU</a>
+						</p>		
+					</div>
 				</article>
 			</section>
 			<aside class="bientot">
