--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -3,31 +3,32 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/Menu1.css">
+		<script src="https://kit.fontawesome.com/c14a206430.js" crossorigin="anonymous"></script>
 		<title>La note enchantée</title>
 	</head>
 	<body>
 		<main>
 			<header class="header">
 				<h1>
-					ohmyfood
+					<a href="index.html">ohmyfood</a>
 				</h1>
 			</header>
 			<section class="note">
 				<div>
+					<i class="fab fa-itunes-note fa-2x"></i>
 					<h2>
 					La note enchantée
 					</h2>
 				</div>
 				<article class="entré">
-					<div>
-						<img src="">
+					<div class="intitule">
+						<img class="image" src="contenu/images/trait de gauche.png" alt="decor menu" title="trait"/>
 						<p>
 							Prélude
-						<p>
-						<img src="">
+						</p>
+						<img src="contenu/images/trait de droite.png" alt="decor menu" title="trait"/>
 					</div>
 					<ul>
 						<li>
@@ -65,12 +66,12 @@
 					</ul>
 				</article>
 				<aside>
-					<div>	
-						<img src="">
+					<div class="intitule">	
+						<img src="contenu/images/trait de gauche.png" alt="decor menu" title="trait"/>
 						<p>
 						Point d'orgue
 						</p>
-						<img src="	">
+						<img src="contenu/images/trait de droite.png" alt="decor menu" title="trait"/>
 					</div>
 					<ul>
 						<li>
@@ -100,12 +101,12 @@
 					</ul>
 				</aside>	
 				<aside>	
-					<div>
-						<img src="">
+					<div class="intitule">
+						<img src="contenu/images/trait de gauche.png" alt="decor menu" title="trait"/>
 						<p>
 						Mouvement final
 						</p>
-						<img src="">
+						<img src="contenu/images/trait de droite.png" alt="decor menu" title="trait"/>
 					</div>		
 					<ul>
 						<li>
@@ -124,6 +125,12 @@
 							</p>
 						</li>
 					</ul>
+				</aside>
+				<aside class="footer-menu">
+					<i class="fab fa-itunes-note fa-1x"></i>
+					<h4>
+						La note enchantée
+					</h4>
 				</aside>
 			</section>
 			<footer class="pied">
