--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -10,7 +10,7 @@
 		<main>
 			<header class="header">
 				<h1>
-					ohmyfood
+					<a href="index.html">ohmyfood</a>
 				</h1>
 			</header>
 			<article class="palette">
