--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -24,7 +24,7 @@
 				</div>
 				<article class="entré">
 					<div class="intitule">
-						<img class="image" src="contenu/images/trait de gauche.png" alt="decor menu" title="trait"/>
+						<img src="contenu/images/trait de gauche.png" alt="decor menu" title="trait"/>
 						<p>
 							Prélude
 						</p>
