--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/Menu4.css">
 		<title>La palette du goût</title>
 	</head>
 	<body>
@@ -13,98 +14,118 @@
 					<a href="index.html">ohmyfood</a>
 				</h1>
 			</header>
-			<article class="palette">
-				<h2>
-					La palette du goût
-				</h2>
-				<aside>
-					<p>
-						Esquisse
-					</p>
-					<div class="position">
-						<div class="texte">
-							<p>
-								Fricassée d'escargot au piment d'espeltte
+			<section class="palette">
+				<div>
+					<h2>
+						La palette du goût 
+					</h2>
+				</div>
+				<article class="entré">
+					<div class="intitule">
+						<img src="">
+						<p>
+							Esquisse
+						</p>
+						<img src="">
+					</div>
+					<ul>
+						<li>
+							<p class="repas">
+								Fricassée d'escargot au piment d'espelette
 							</p>
-							<p>
-								Oeuf au plat assaisonné à la truffe sur lit de caviar
-							</p>
-							<p>
-								Foie gras de canard mi-cuit et ses copeaux de truffe noire
-							</p>
-						</div>
-						<div>	
-							<p>
+							<p class="prix">
 								60€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="repas">
+								Oeuf au plat assaisonné à la truffe sur lit de caviar 
+							</p>
+							<p class="prix">
 								55€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="repas">
+								Foie gras de canard mi-cuit et ses copeaux de truffe noir
+							</p>
+							<p class="prix">
 								65€
 							</p>
-						</div>	
-					</div>
-				</aside>
+						</li>
+					</ul>
+				</article>
 				<aside>
-					<p>
-						Oeuvre de maître 
-					</p>
-					<div class="position">
-						<div class="texte">
-							<p>
+					<div class="intitule">	
+						<img src="">
+						<p>
+							Oeuvre de maître 
+						</p>
+						<img src="">
+					</div>
+					<ul>
+						<li>
+							<p class="repas">
 								Filet de boeuf aux herbes accompagné de sa ribambelle de légumes
 							</p>
-							<p>
-								Parmentier de queue de boeuf à la truffe noire sur sa purée de panais 
-							</p>
-							<p>
-								Filet de Turbot aux agrumes 
-							</p>
-						</div>
-						<div>
-							<p>
+							<p class="prix">
 								70€
 							</p>
-							<p>
-								85€
+						</li>
+						<li>
+							<p class="repas">
+								Parmentier de queue de boeuf à la truffe noir sur sa purée de panais 
 							</p>
-							<p>
+							<p class="prix">
+								85€
+							</p>	
+						</li>
+						<li>
+							<p class="repas">
+								Filet de Turbot aux agrumes  
+							</p>
+							<p class="prix">
 								125€
 							</p>
-						</div>
-					</div>
+						</li>
+					</ul>
 				</aside>	
-				<aside>		
-					<p>
-						Au sommet de l'art
-					</p>
-					<div class="position">
-						<div class="texte">
-							<p>
-								Paris-Brest revisité
+				<aside>	
+					<div class="intitule">
+						<img src="">
+						<p>
+							Au sommet de l'art
+						</p>
+						<img src="">
+					</div>		
+					<ul>
+						<li>
+							<p class="dessert">
+							 	Paris-brest revisité 
 							</p>
-							<p>
-								Macaron au chocolat d'exception et glace à la vanille de Madagascar
-							</p>
-							<p>
-								Mousse au chocolat au piment d'espelette et à la truffe noir
-							</p>
-						</div>
-						<div>
-							<p>
+							<p class="prix">
 								55€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="dessert">
+								Macaron au chocolat d'exception et glace à la vanille de Madagascar
+							</p>
+							<p class="prix">
 								65€
 							</p>
-							<p>
-								60€
+						</li>
+						<li>
+							<p class="dessert">
+								Mousse au chocolat au piment d'espelette et à la truffe noire
 							</p>
-						</div>
-					</div>	
+							<p class="prix">
+								60S€
+							</p>
+						</li>
+					</ul>
 				</aside>							
-			</article>
+			</section>
 			<footer class="pied">
 				<div>Mentions légales</div>
 				<div>Contactez-nous</div>
