--- a/Le-chic-a-la-francaise.html
+++ b/Le-chic-a-la-francaise.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/Menu2.css">
 		<title>Le chic à la française</title>
 	</head>
 	<body>
@@ -13,85 +14,109 @@
 					<a href="index.html">ohmyfood</a>
 				</h1>
 			</header>
-			<article class="chic">
-				<h2>
-					Le chic à la française
-				</h2>
-				<aside>
-					<p>
-						Pour se mettre en appétit
-					</p>
-					<div class="position">
-						<div class="texte">
-							<p>
-								Tartare de poule acidulé aux zests d'orange
+			<section class="chic">
+				<div>
+					<h2>
+						Le chic à la française
+					</h2>
+				</div>
+				<article class="entré">
+					<div class="intitule">
+						<img src="">
+						<p>
+							Pour se mettre en appétit
+						</p>
+						<img src="">
+					</div>
+					<ul>
+						<li>
+							<p class="repas">
+								Tartare de poulpe acidulés aux zests d'orange
 							</p>
-							<p>
-								Velouté de légumes d'antan 
-							</p>
-							<p>
-								Soupe à l'oignon revisitée
-							</p>
-						</div>
-						<div>	
-							<p>
+							<p class="prix">
 								79€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="repas">
+								Velouté de légumes d'antan 
+							</p>
+							<p class="prix">
 								57€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="repas">
+								Soupe à l'oignon revisitée
+							</p>
+							<p class="prix">
 								57€
 							</p>
-						</div>	
-					</div>
-				</aside>
+						</li>
+					</ul>
+				</article>
 				<aside>
-					<p>
-						Plaisir des papilles
-					</p>
-					<div class="position">
-						<div class="texte">
-							<p>
+					<div class="intitule">	
+						<img src="">
+						<p>
+							Plaisir des papilles
+						</p>
+						<img src="">
+					</div>
+					<ul>
+						<li>
+							<p class="repas">
 								Coquilles Saint-Jacques accompagnées d'une purée de panais
 							</p>
-							<p>
-								Magret de canard et parmentier de pommes de terres 
-							</p>
-							<p>
-								Pigeonneau d'Ille et Vilaine sur son lit de gnocchis aux légumes 
-							</p>
-						</div>
-						<div>
-							<p>
+							<p class="prix">
 								95€
 							</p>
-							<p>
-								88€
+						</li>
+						<li>
+							<p class="repas">
+								Magret de canard et parmentier de pomme de terre 
 							</p>
-							<p>
+							<p class="prix">
+								88€
+							</p>	
+						</li>
+						<li>
+							<p class="repas">
+								Pigeonneaux d'Ille et Vilaine sur son lit de gnocchis aux légumes 
+							</p>
+							<p class="prix">
 								175€
 							</p>
-						</div>
-					</div>
+						</li>
+					</ul>
 				</aside>	
-				<aside>		
-					<p>
-						Gourmandise sucrées
-					</p>
-					<div class="gourmandise">
+				<aside>	
+					<div class="intitule">
+						<img src="">
 						<p>
-							Pétales de violettes glacés et purée de noisettes 
+							Gourmandises sucrées
 						</p>
-						<p>
-							Fondant au chocolat revisité
-						</p>
-						<p>
-							Millefeuille croustillant
-						</p>
-					</div>
-				</aside>								
-			</article>
+						<img src="">
+					</div>		
+					<ul>
+						<li>
+							<p class="dessert">
+							 	Pétales de violettes glacés et purée de noisettes
+							</p>
+						</li>
+						<li>
+							<p class="dessert">
+								Fondant au chocolat revisité
+							</p>
+						</li>
+						<li>
+							<p class="dessert">
+								Millefeuille croustillant
+							</p>
+						</li>
+					</ul>
+				</aside>				
+			</section>
 			<footer class="pied">
 				<div>Mentions légales</div>
 				<div>Contactez-nous</div>
