--- a/Le-delice-des-papilles.html
+++ b/Le-delice-des-papilles.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/Menu3.css">
 		<title>Le délice des papilles</title>
 	</head>
 	<body>
@@ -13,98 +14,118 @@
 					<a href="index.html">ohmyfood</a>
 				</h1>
 			</header>
-			<article class="delice">
-				<h2>
-					Le délice des papilles
-				</h2>
-				<aside>
-					<p3>
-						Pour bien commencer
-					</p>
-					<div class="position">
-						<div class="texte">
-							<p>
+			<section class="delice">
+				<div>
+					<h2>
+						Le délices des papilles
+					</h2>
+				</div>
+				<article class="entré">
+					<div class="intitule">
+						<img src="">
+						<p>
+							Pour bien commencer
+						</p>
+						<img src="">
+					</div>
+					<ul>
+						<li>
+							<p class="repas">
 								Tartare de thon assaisonné au yuzu
 							</p>
-							<p>
-								Bouchée de homard croustillant et sa farandole de petit légumes
-							</p>
-							<p>
-								Velouté de cépes aux truffes
-							</p>
-						</div>
-						<div>	
-							<p>
+							<p class="prix">
 								55€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="repas">
+								Bouchée de homard croustillant et sa farandole de petits légumes 
+							</p>
+							<p class="prix">
 								89€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="repas">
+								Velouté de cépes aux truffes
+							</p>
+							<p class="prix">
 								56€
 							</p>
-						</div>	
-					</div>
-				</aside>
+						</li>
+					</ul>
+				</article>
 				<aside>
-					<p>
-						Pour bien continuer
-					</p>
-					<div class="position">
-						<div class="texte">
-							<p>
-								Poulet rôti aux herbes de provence et sa créme de truffe
+					<div class="intitule">	
+						<img src="">
+						<p>
+							Pour bien continuer
+						</p>
+						<img src="">
+					</div>
+					<ul>
+						<li>
+							<p class="repas">
+								Poulet rôti aux herbes de provences et sa créme de truffe
 							</p>
-							<p>
-								Langouste rôtie et ses légumes de saison 
-							</p>
-							<p>
-								Côte de boeuf angus et sa purée de panais 
-							</p>
-						</div>
-						<div>
-							<p>
+							<p class="prix">
 								110€
 							</p>
-							<p>
-								225€
+						</li>
+						<li>
+							<p class="repas">
+								Langouste rôtie et ses légumes de saison 
 							</p>
-							<p>
+							<p class="prix">
+								225€
+							</p>	
+						</li>
+						<li>
+							<p class="repas">
+								Côte de boeuf angus et sa purée de panais  
+							</p>
+							<p class="prix">
 								115€
 							</p>
-						</div>
-					</div>
+						</li>
+					</ul>
 				</aside>	
-				<aside>		
-					<p>
-						Pour bien terminer
-					</p>
-					<div class="position">
-						<div class="texte">
-							<p>
-								Farandoles de desserts du chef 
+				<aside>	
+					<div class="intitule">
+						<img src="">
+						<p>
+							Pour bien finir
+						</p>
+						<img src="">
+					</div>		
+					<ul>
+						<li>
+							<p class="dessert">
+							 	Farandole de desserts du chef 
 							</p>
-							<p>
-								Créme brulée revistée
-							</p>
-							<p>
-								Tiramisu à la noisette
-							</p>
-						</div>
-						<div>
-							<p>
+							<p class="prix">
 								55€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="dessert">
+								Créme brulée revisitée
+							</p>
+							<p class="prix">
 								60€
 							</p>
-							<p>
+						</li>
+						<li>
+							<p class="dessert">
+								Tiramisu à la noisette
+							</p>
+							<p class="prix">
 								55€
 							</p>
-						</div>
-					</div>	
-				</aside>							
-			</article>
+						</li>
+					</ul>
+				</aside>					
+			</section>
 			<footer class="pied">
 				<div>Mentions légales</div>
 				<div>Contactez-nous</div>
