--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -101,7 +101,7 @@
 					<ul>
 						<li>
 							<p class="dessert">
-							 	Paris-brest revisité 
+							 	Paris-Brest revisité 
 							</p>
 							<p class="prix">
 								55€
@@ -120,7 +120,7 @@
 								Mousse au chocolat au piment d'espelette et à la truffe noire
 							</p>
 							<p class="prix">
-								60S€
+								60€
 							</p>
 						</li>
 					</ul>
