--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							La note enchantée
 						</h2>	
 						<p>
-							<a href="La-note-enchantee.html">MENU</a>
+							<a href="La-note-enchantee.html">Menu</a>
 						</p>	
 					</div>
 					<div class="chic">
@@ -30,7 +30,7 @@
 							Le chic à la française
 						</h2>
 						<p>
-							<a href="Le-chic-a-la-francaise.html">MENU</a>
+							<a href="Le-chic-a-la-francaise.html">Menu</a>
 						</p>		
 					</div>
 				</article>
@@ -40,7 +40,7 @@
 							Le délice des papilles
 						</h2>
 						<p>
-							<a href="Le-delice-des-papilles.html">MENU</a>
+							<a href="Le-delice-des-papilles.html">Menu</a>
 						</p>	
 					</div>
 					<div class="palette">
@@ -48,7 +48,7 @@
 							La palette du goût
 						</h2>
 						<p>
-							<a href="La-palette-du-gout.html">MENU</a>
+							<a href="La-palette-du-gout.html">Menu</a>
 						</p>		
 					</div>
 				</article>
