--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -16,7 +16,7 @@
 				</h1>
 			</header>
 			<section class="note">
-				<div>
+				<div class="titre-menu">
 					<i class="fab fa-itunes-note fa-2x"></i>
 					<h2>
 					La note enchantée
@@ -24,11 +24,15 @@
 				</div>
 				<article class="entré">
 					<div class="intitule">
-						<img src="contenu/images/trait de gauche.png" alt="decor menu" title="trait"/>
+						<p class="photo">
+							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
+						</p>
 						<p>
 							Prélude
 						</p>
-						<img src="contenu/images/trait de droite.png" alt="decor menu" title="trait"/>
+						<p class="photo">
+							<img src="ressources/images/menu-1/trait-de-droite.png" alt="decor menu" title="trait"/>
+						</p>
 					</div>
 					<ul>
 						<li>
@@ -67,11 +71,14 @@
 				</article>
 				<aside>
 					<div class="intitule">	
-						<img src="contenu/images/trait de gauche.png" alt="decor menu" title="trait"/>
-						<p>
+						<p class="photo">
+							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
+						</p>
 						Point d'orgue
 						</p>
-						<img src="contenu/images/trait de droite.png" alt="decor menu" title="trait"/>
+						<p class="photo">
+							<img src="ressources/images/menu-1/trait-de-droite.png" alt="decor menu" title="trait"/>
+						</p>
 					</div>
 					<ul>
 						<li>
@@ -102,11 +109,14 @@
 				</aside>	
 				<aside>	
 					<div class="intitule">
-						<img src="contenu/images/trait de gauche.png" alt="decor menu" title="trait"/>
-						<p>
+						<p class="photo">
+							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
+						</p>
 						Mouvement final
 						</p>
-						<img src="contenu/images/trait de droite.png" alt="decor menu" title="trait"/>
+						<p class="photo">
+							<img src="ressources/images/menu-1/trait-de-droite.png" alt="decor menu" title="trait"/>
+						</p>
 					</div>		
 					<ul>
 						<li>
