--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -22,11 +22,15 @@
 				</div>
 				<article class="entré">
 					<div class="intitule">
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-4/menu4-gauche.png" alt="decor menu title" title="trait"/>
+						</p>
 						<p>
 							Esquisse
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-4/menu4-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>
 					<ul>
 						<li>
@@ -57,11 +61,15 @@
 				</article>
 				<aside>
 					<div class="intitule">	
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-4/menu4-gauche.png" alt="decor menu title" title="trait"/>
+						</p>
 						<p>
 							Oeuvre de maître 
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-4/menu4-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>
 					<ul>
 						<li>
@@ -92,11 +100,15 @@
 				</aside>	
 				<aside>	
 					<div class="intitule">
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-4/menu4-gauche.png" alt="decor menu title" title="trait"/>
+						</p>
 						<p>
 							Au sommet de l'art
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-4/menu4-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>		
 					<ul>
 						<li>
