--- a/Le-chic-a-la-francaise.html
+++ b/Le-chic-a-la-francaise.html
@@ -15,18 +15,22 @@
 				</h1>
 			</header>
 			<section class="chic">
-				<div>
+				<div class="titre-menu">
 					<h2>
 						Le chic à la française
 					</h2>
 				</div>
 				<article class="entré">
 					<div class="intitule">
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-2/menu2-top-gauche.png" alt="decor menu title" title="trait"/>
+						</p>	
 						<p>
 							Pour se mettre en appétit
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-2/menu2-top-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>
 					<ul>
 						<li>
@@ -57,11 +61,15 @@
 				</article>
 				<aside>
 					<div class="intitule">	
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-2/menu2-milieu-gauche.png" alt="decor menu title" title="trait"/>
+						</p>
 						<p>
 							Plaisir des papilles
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-2/menu2-milieu-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>
 					<ul>
 						<li>
@@ -92,11 +100,15 @@
 				</aside>	
 				<aside>	
 					<div class="intitule">
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-2/menu2-bottom-gauche.png" alt="decor menu title" title="trait"/>
+						</p>
 						<p>
 							Gourmandises sucrées
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-2/menu2-bottom-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>		
 					<ul>
 						<li>
