--- a/Le-delice-des-papilles.html
+++ b/Le-delice-des-papilles.html
@@ -22,11 +22,15 @@
 				</div>
 				<article class="entré">
 					<div class="intitule">
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-3/menu3-top-gauche.png" alt="decor menu title" title="trait"/>
+						</p>
 						<p>
 							Pour bien commencer
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-3/menu3-top-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>
 					<ul>
 						<li>
@@ -57,11 +61,15 @@
 				</article>
 				<aside>
 					<div class="intitule">	
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-3/menu3-milieu-gauche.png" alt="decor menu title" title="trait"/>
+						</p>
 						<p>
 							Pour bien continuer
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-3/menu3-milieu-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>
 					<ul>
 						<li>
@@ -92,11 +100,15 @@
 				</aside>	
 				<aside>	
 					<div class="intitule">
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-3/menu3-bottom-gauche.png" alt="decor menu title" title="trait"/>
+						</p>
 						<p>
 							Pour bien finir
 						</p>
-						<img src="">
+						<p class="photo">
+							<img src="ressources/images/menu-3/menu3-bottom-droit.png" alt="decor menu title" title="trait"/>
+						</p>
 					</div>		
 					<ul>
 						<li>
