--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -22,7 +22,7 @@
 					La note enchantée
 					</h2>
 				</div>
-				<article class="entré">
+				<aside>
 					<div class="intitule">
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
@@ -68,12 +68,13 @@
 							</p>
 						</li>
 					</ul>
-				</article>
+				</aside>
 				<aside>
 					<div class="intitule">	
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
 						</p>
+						<p>
 						Point d'orgue
 						</p>
 						<p class="photo">
@@ -112,6 +113,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
 						</p>
+						<p>
 						Mouvement final
 						</p>
 						<p class="photo">
