--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -20,7 +20,7 @@
 						La palette du goût 
 					</h2>
 				</div>
-				<article class="entré">
+				<aside>
 					<div class="intitule">
 						<p class="photo">
 							<img src="ressources/images/menu-4/menu4-gauche.png" alt="decor menu title" title="trait"/>
@@ -58,7 +58,7 @@
 							</p>
 						</li>
 					</ul>
-				</article>
+				</aside>
 				<aside>
 					<div class="intitule">	
 						<p class="photo">
