--- a/Le-chic-a-la-francaise.html
+++ b/Le-chic-a-la-francaise.html
@@ -20,7 +20,7 @@
 						Le chic à la française
 					</h2>
 				</div>
-				<article class="entré">
+				<aside>
 					<div class="intitule">
 						<p class="photo">
 							<img src="ressources/images/menu-2/menu2-top-gauche.png" alt="decor menu title" title="trait"/>
@@ -58,8 +58,8 @@
 							</p>
 						</li>
 					</ul>
-				</article>
-				<aside>
+				</aside>
+				<aside id="color-pink">
 					<div class="intitule">	
 						<p class="photo">
 							<img src="ressources/images/menu-2/menu2-milieu-gauche.png" alt="decor menu title" title="trait"/>
@@ -98,7 +98,7 @@
 						</li>
 					</ul>
 				</aside>	
-				<aside>	
+				<aside id="color-blue">	
 					<div class="intitule">
 						<p class="photo">
 							<img src="ressources/images/menu-2/menu2-bottom-gauche.png" alt="decor menu title" title="trait"/>
