--- a/Le-delice-des-papilles.html
+++ b/Le-delice-des-papilles.html
@@ -20,7 +20,7 @@
 						Le délices des papilles
 					</h2>
 				</div>
-				<article class="entré">
+				<aside>
 					<div class="intitule">
 						<p class="photo">
 							<img src="ressources/images/menu-3/menu3-top-gauche.png" alt="decor menu title" title="trait"/>
@@ -58,7 +58,7 @@
 							</p>
 						</li>
 					</ul>
-				</article>
+				</aside>
 				<aside>
 					<div class="intitule">	
 						<p class="photo">
