--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
 					<a href="index.html">ohmyfood</a>
 				</h1>
 			</header>
-			<section class="menu">
-				<article class="row">		
+			<aside class="menu">
+				<div class="row">		
 					<div class="note"> 
 						<i class="fab fa-itunes-note fa-2x"></i>
 						<h2> 
 							La note enchantée
 						</h2>	
-						<p>
+						<p class="lien">
 							<a href="La-note-enchantee.html">Menu</a>
 						</p>	
 					</div>
 					<div class="chic">
-						<h2>
+						<h2 class="francaise">
 							Le chic à la française
 						</h2>
-						<p>
+						<p class="lien">
 							<a href="Le-chic-a-la-francaise.html">Menu</a>
 						</p>		
 					</div>
-				</article>
-				<article class="row">	
+				</div>
+				<div class="row">	
 					<div class="delice">
 						<h2>
 							Le délice des papilles
 						</h2>
-						<p>
+						<p class="lien">
 							<a href="Le-delice-des-papilles.html">Menu</a>
 						</p>	
 					</div>
@@ -47,12 +47,12 @@
 						<h2>
 							La palette du goût
 						</h2>
-						<p>
+						<p class="lien">
 							<a href="La-palette-du-gout.html">Menu</a>
 						</p>		
 					</div>
-				</article>
-			</section>
+				</div>
+			</aside>
 			<aside class="bientot">
 					<p>
 						Prochainement
