--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
 					</div>
 				</div>
 			</aside>
-			<aside class="bientot">
+			<aside class="prochainement">
+				<div class="bientot">
 					<p>
-						Prochainement
-					</p>	
+						Prochainement ...
+					</p>
+				</div>		
 			</aside>
 			<footer class="pied">
 					<div>Mentions légales</div>
