--- a/Le-chic-a-la-francaise.html
+++ b/Le-chic-a-la-francaise.html
@@ -130,8 +130,12 @@
 				</aside>				
 			</section>
 			<footer class="pied">
-				<div>Mentions légales</div>
-				<div>Contactez-nous</div>
+				<div>
+					<a href="mentions-legales.html">Mentions légales</a>
+				</div>
+				<div>
+					<a href="mailto:gmail.com">Contactez-nous</a>
+				</div>	
 			</footer>
 		</main>
 	</body>
