--- a/index.html
+++ b/index.html
@@ -16,40 +16,48 @@
 			</header>
 			<aside class="menu">
 				<div class="row">		
-					<div class="note"> 
-						<i class="fab fa-itunes-note fa-2x"></i>
-						<h2> 
-							La note enchantée
-						</h2>	
-						<p class="lien">
-							<a href="La-note-enchantee.html">Menu</a>
-						</p>	
+					<div class="note">
+						<div class="effets">
+							<i class="fab fa-itunes-note fa-2x"></i>
+							<h2> 
+								La note enchantée
+							</h2>	
+							<p class="lien">
+								<a href="La-note-enchantee.html">Menu</a>
+							</p>
+						</div>	
 					</div>
 					<div class="chic">
-						<h2 class="francaise">
-							Le chic à la française
-						</h2>
-						<p class="lien">
-							<a href="Le-chic-a-la-francaise.html">Menu</a>
-						</p>		
+						<div class="effets">
+							<h2 class="francaise">
+								Le chic à la française
+							</h2>
+							<p class="lien">
+								<a href="Le-chic-a-la-francaise.html">Menu</a>
+							</p>
+						</div>			
 					</div>
 				</div>
 				<div class="row">	
 					<div class="delice">
-						<h2>
-							Le délice des papilles
-						</h2>
-						<p class="lien">
-							<a href="Le-delice-des-papilles.html">Menu</a>
-						</p>	
+						<div class="effets">
+							<h2>
+								Le délice des papilles
+							</h2>
+							<p class="lien">
+								<a href="Le-delice-des-papilles.html">Menu</a>
+							</p>
+						</div>	
 					</div>
 					<div class="palette">
-						<h2>
-							La palette du goût
-						</h2>
-						<p class="lien">
-							<a href="La-palette-du-gout.html">Menu</a>
-						</p>		
+						<div class="effets">
+							<h2>
+								La palette du goût
+							</h2>
+							<p class="lien">
+								<a href="La-palette-du-gout.html">Menu</a>
+							</p>
+						</div>		
 					</div>
 				</div>
 			</aside>
@@ -61,8 +69,12 @@
 				</div>		
 			</aside>
 			<footer class="pied">
-					<div>Mentions légales</div>
-					<div>Contactez-nous</div>		
+				<div>
+					<a href="mentions-legales.html">Mentions légales</a>
+				</div>
+				<div>
+					<a href="mailto:gmail.com">Contactez-nous</a>
+				</div>		
 			</footer>
 		</main>
 	</body>
