--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang=fr>
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script src="https://kit.fontawesome.com/c14a206430.js" crossorigin="anonymous"></script>
 		<title>ohmyfood</title>
 	</head>
 	<body>
 		<main>
-			<header>
-				ohmyfood
+			<header class="header">
+				<h1>
+					<a href="index.html">ohmyfood</a>
+				</h1>
 			</header>
-			<section>
-			</section>
-			<footer>
-				Mentions légales Conactez nous
+			
+			<footer class="pied">
+				<div>
+					<a href="mentions-legales.html">Mentions légales</a>
+				</div>
+				<div>
+					<a href="mailto:gmail.com">Contactez-nous</a>
+				</div>	
 			</footer>
 		</main>
 	</body>
