--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -146,8 +146,11 @@
 				</aside>
 			</section>
 			<footer class="pied">
-				<div>Mentions légales</div>
-				<div>Contactez-nous</div>
+				<div>
+					<a href="mentions-legales.html">Mentions légales</a>
+				</div>
+				<div>
+					<a href="mailto:gmail.com">Contactez-nous</a>
 			</footer>
 		</main>
 	</body>
