--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -27,7 +27,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Prélude
 						</p>
 						<p class="photo">
@@ -74,8 +74,8 @@
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
 						</p>
-						<p>
-						Point d'orgue
+						<p class="soulignement">
+							Point d'orgue
 						</p>
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-droite.png" alt="decor menu" title="trait"/>
@@ -113,8 +113,8 @@
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
 						</p>
-						<p>
-						Mouvement final
+						<p class="soulignement">
+							Mouvement final
 						</p>
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-droite.png" alt="decor menu" title="trait"/>
