--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -25,7 +25,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-4/menu4-gauche.png" alt="decor menu title" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Esquisse
 						</p>
 						<p class="photo">
@@ -64,7 +64,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-4/menu4-gauche.png" alt="decor menu title" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Oeuvre de maître 
 						</p>
 						<p class="photo">
@@ -103,7 +103,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-4/menu4-gauche.png" alt="decor menu title" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Au sommet de l'art
 						</p>
 						<p class="photo">
