--- a/Le-chic-a-la-francaise.html
+++ b/Le-chic-a-la-francaise.html
@@ -25,7 +25,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-2/menu2-top-gauche.png" alt="decor menu title" title="trait"/>
 						</p>	
-						<p>
+						<p class="soulignement">
 							Pour se mettre en appétit
 						</p>
 						<p class="photo">
@@ -64,7 +64,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-2/menu2-milieu-gauche.png" alt="decor menu title" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Plaisir des papilles
 						</p>
 						<p class="photo">
@@ -103,7 +103,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-2/menu2-bottom-gauche.png" alt="decor menu title" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Gourmandises sucrées
 						</p>
 						<p class="photo">
