--- a/Le-delice-des-papilles.html
+++ b/Le-delice-des-papilles.html
@@ -25,7 +25,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-3/menu3-top-gauche.png" alt="decor menu title" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Pour bien commencer
 						</p>
 						<p class="photo">
@@ -64,7 +64,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-3/menu3-milieu-gauche.png" alt="decor menu title" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Pour bien continuer
 						</p>
 						<p class="photo">
@@ -103,7 +103,7 @@
 						<p class="photo">
 							<img src="ressources/images/menu-3/menu3-bottom-gauche.png" alt="decor menu title" title="trait"/>
 						</p>
-						<p>
+						<p class="soulignement">
 							Pour bien finir
 						</p>
 						<p class="photo">
