--- a/index.html
+++ b/index.html
@@ -64,15 +64,20 @@
 			<aside class="prochainement">
 				<div class="bientot">
 					<p>
-						Prochainement ...
+						Prochainement
+						<span class="loader">
+							<span></span>
+							<span></span>
+							<span></span>
+						</span>
 					</p>
 				</div>		
 			</aside>
 			<footer class="pied">
-				<div>
+				<div class="wiggle">
 					<a href="mentions-legales.html">Mentions légales</a>
 				</div>
-				<div>
+				<div class="wiggle">
 					<a href="mailto:gmail.com">Contactez-nous</a>
 				</div>		
 			</footer>
