--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 							<h2> 
 								La note enchantée
 							</h2>	
-							<p class="lien">
-								<a href="La-note-enchantee.html">Menu</a>
+							<p class="lien font-M1">
+								<a href="La-note-enchantee.html">MENU</a>
 							</p>
 						</div>	
 					</div>
@@ -32,7 +32,7 @@
 							<h2 class="francaise">
 								Le chic à la française
 							</h2>
-							<p class="lien">
+							<p class="lien font-M2">
 								<a href="Le-chic-a-la-francaise.html">Menu</a>
 							</p>
 						</div>			
@@ -44,7 +44,7 @@
 							<h2>
 								Le délice des papilles
 							</h2>
-							<p class="lien">
+							<p class="lien font-M1">
 								<a href="Le-delice-des-papilles.html">Menu</a>
 							</p>
 						</div>	
@@ -54,7 +54,7 @@
 							<h2>
 								La palette du goût
 							</h2>
-							<p class="lien">
+							<p class="lien font-M1">
 								<a href="La-palette-du-gout.html">Menu</a>
 							</p>
 						</div>		
