--- a/La-note-enchantee.html
+++ b/La-note-enchantee.html
@@ -17,7 +17,7 @@
 			</header>
 			<section class="note">
 				<div class="titre-menu">
-					<i class="fab fa-itunes-note fa-2x"></i>
+					<i class="musique fab fa-itunes-note fa-3x"></i>
 					<h2>
 					La note enchantée
 					</h2>
@@ -69,7 +69,7 @@
 						</li>
 					</ul>
 				</aside>
-				<aside>
+				<aside class="espace">
 					<div class="intitule">	
 						<p class="photo">
 							<img src="ressources/images/menu-1/trait-de-gauche.png" alt="decor menu" title="trait"/>
@@ -92,7 +92,7 @@
 						</li>
 						<li>
 							<p class="repas">
-								Langoustine poêlée,purée de patate douce 
+								Langoustine poêlée, purée de patate douce 
 							</p>
 							<p class="prix">
 								205€
@@ -139,7 +139,7 @@
 					</ul>
 				</aside>
 				<aside class="footer-menu">
-					<i class="fab fa-itunes-note fa-1x"></i>
+					<i class="fab fa-itunes-note fa-2x"></i>
 					<h4>
 						La note enchantée
 					</h4>
