--- a/Le-delice-des-papilles.html
+++ b/Le-delice-des-papilles.html
@@ -59,7 +59,7 @@
 						</li>
 					</ul>
 				</aside>
-				<aside>
+				<aside class="espace">
 					<div class="intitule">	
 						<p class="photo">
 							<img src="ressources/images/menu-3/menu3-milieu-gauche.png" alt="decor menu title" title="trait"/>
