--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 			</header>
 			<aside class="menu">
 				<div class="row">		
-					<div class="note">
+					<div class="menus note">
 						<div class="effets">
-							<i class="fab fa-itunes-note fa-2x"></i>
+							<i class="musique fab fa-itunes-note fa-2x"></i>
 							<h2> 
 								La note enchantée
 							</h2>	
@@ -27,7 +27,7 @@
 							</p>
 						</div>	
 					</div>
-					<div class="chic">
+					<div class="menus chic">
 						<div class="effets">
 							<h2 class="francaise">
 								Le chic à la française
@@ -39,7 +39,7 @@
 					</div>
 				</div>
 				<div class="row">	
-					<div class="delice">
+					<div class="menus delice">
 						<div class="effets">
 							<h2>
 								Le délice des papilles
@@ -49,7 +49,7 @@
 							</p>
 						</div>	
 					</div>
-					<div class="palette">
+					<div class="menus palette">
 						<div class="effets">
 							<h2>
 								La palette du goût
