--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -59,7 +59,7 @@
 						</li>
 					</ul>
 				</aside>
-				<aside>
+				<aside class="espace">
 					<div class="intitule">	
 						<p class="photo">
 							<img src="ressources/images/menu-4/menu4-gauche.png" alt="decor menu title" title="trait"/>
