--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="row">		
 					<div class="menus note">
 						<div class="effets">
-							<i class="musique fab fa-itunes-note fa-2x"></i>
+							<i class="fab fa-itunes-note fa-2x"></i>
 							<h2> 
 								La note enchantée
 							</h2>	
